edit applicaton.yaml,yang using pacemakerStarter.class to running entity project, then to open localhost:8080 in the website

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,7 @@
 server:
   port: 8080
 # this index.html running server port
+spring:
+  resources:
+    static-locations: classpath:/static/,classpath:/public
+# load related js file when running the page
